force-app/main/default/objects/LabourExpence__c/LabourExpence__c.object-meta.xml
<CustomObject>
    <label>LabourExpence</label>
    <nameField>
        <displayFormat>LEX-{00}</displayFormat>
        <label>LEX</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LabourExpences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>