force-app/main/default/objects/LabourExpence__c/fields/AgriFarmer__c.field-meta.xml
<CustomField>
    <fullName>AgriFarmer__c</fullName>
    <label>AgriFarmer</label>
    <referenceTo>AgriFarmer__c</referenceTo>
    <relationshipLabel>List Of LE</relationshipLabel>
    <relationshipName>LabourExpences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>