force-app/main/default/objects/LabourExpence__c/fields/PastExpence__c.field-meta.xml
<CustomField>
    <fullName>PastExpence__c</fullName>
    <label>PastExpence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>