force-app/main/default/objects/LabourExpence__c/fields/PresentExpence__c.field-meta.xml
<CustomField>
    <fullName>PresentExpence__c</fullName>
    <label>PresentExpence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>